# offline-evals-cicd

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  env.example  langgraph.json  pyproject.toml
.github/scripts/: report_eval.py
.github/workflows/: financial-agents-pipeline.yml
agents/: __init__.py  market_data_agent.py  portfolio_agent.py
evals/: __init__.py  run_all_evals.py  run_market_eval.py  run_portfolio_eval.py
helpers/: create_financial_datasets.py
test_slack/: slack_message.json  test_slack_notification.sh
tests/: __init__.py
tests/offline_evals/: __init__.py  test_market_agent.py  test_portfolio_agent.py
